refactor(libra): convert enum fields to string for database storage
Change column mapping from enum to string for various entities and their related
operators. This is to align with the database schema updates and ensure compatibility
with the new storage strategy. Affected entities include Avatars, Categories, Data
Statuses, Execution Statuses, Job Types, Language Statuses, Menu Item Types, and
Extension Statuses/Sources.

Also, rename LoginLogMapper to LoginLogConverter to reflect its new usage in the
LoginLogOperator.

BREAKING CHANGE: Enum fields are now stored as strings in the database. This may
affect downstream systems relying on the previous enum-based serialization.